atread-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: atreadapi
spec: 
  selector:
    app: nodeapi
  ports:
    - port: 3000
      targetPort: 3000


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapi
  labels:
    app: nodeapi
spec:
  selector:
    matchLabels:
      app: nodeapi
  replicas: 1
  template:
    metadata:
      labels:
        app: nodeapi
    spec:
      containers:
      - name: nodeapi
        image: golisaku/atreadapi:latest
        # command: ["/bin/sh"]
        # tty: true
        # stdin: true
        imagePullPolicy: Never
        ports: 
        - containerPort: 3000 
        volumeMounts:
          - mountPath: /usr/src/app
            name: atreadapi-volume
      volumes:
        - name: atreadapi-volume
          persistentVolumeClaim:
              claimName: atreadapi-pvc
        # env: 
        # - name: CONNECTION_STRING
        #   value: ""
