mongo-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: atreaddb
spec:
  selector:
    app: mongo
  ports: 
  - port: 27017
    targetPort: 27017
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  # serviceName: atreaddb
  selector:
    matchLabels:
      app : mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongod-container
        image: mongo
        # command:
        #   - mongod
        #   - "--bind_ip"
        #   - "0.0.0.0"
        #   - "--replSet"
        #   - "MainRepSet"
        ports:
          - containerPort: 27017
        # volumeMounts:
        #   - name: mongo-persistent-storage
        #     mountPath: /data/db
      # - name: mongo-sidecar
      #   image: cvallance/mongo-k8s-sidecar
      #   env:
      #     - name: MONGO_SIDECAR_POD_LABELS
      #       value: "role=mongo,environment=test"
      # volumes:
      # - name: test-volume
      #   emptyDir: {}
        # hostPath: 
        #   path: /data
        #   type: Directory
