ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atread-ingress
  # annotations:
  #   ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: atreadapi
              port:  
                number: 3000
